Service Regression/.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/echosign_dev1__SIGN_Form_Field_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>echosign_dev1__Data_Mapping__c</fullName>
        <label>Salesforce to EchoSign Data Mapping</label>
        <referenceTo>echosign_dev1__SIGN_Merge_Mapping__c</referenceTo>
        <relationshipLabel>EchoSign Form Field Mappings</relationshipLabel>
        <relationshipName>Form_Field_Mappings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Disable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Form_Field_Name__c</fullName>
        <label>Target EchoSign Document Field</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Index__c</fullName>
        <label>Index</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>echosign_dev1__Input_Type__c</fullName>
        <label>Input Type</label>
        <picklist>
            <picklistValues>
                <fullName>List</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>EchoSign Form Field Mapping</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Target Field</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EchoSign Form Field Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>